[project]
name = "brain-tumor-classification-segmentation"
version = "0.1.0"
description = ""
authors = [
    {name = "Robin Guiavarch",email = "robin.guiavarch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
